# envoy-authorization-cache-filter

./: .gitignore  README.md  docker-compose.yaml
backend-service/: Cargo.toml  Dockerfile  index.js  package-lock.json  package.json
backend-service/src/: main.rs
cache-filter/: Cargo.toml  Makefile
cache-filter/src/: lib.rs
envoy/: Dockerfile  cache_filter.wasm  envoy.yaml  singleton_service.wasm
management-service/: Cargo.toml  Dockerfile  go.mod  index.js  main.go  package-lock.json  package.json
management-service/src/: main.rs
singleton-service/: Cargo.toml  Makefile
singleton-service/src/: lib.rs
