[package]
name = "backend-service"
version = "0.1.0"
authors = ["Lahiru <lahirudesilva.17@cse.mrt.ac.lk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.63"
rocket_contrib = "0.4.7"
log = "0.4.13"