[package]
name = "singleton-service"
version = "0.1.0"
authors = ["Lahiru <lahirudesilva.17@cse.mrt.ac.lk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.63"
log = "0.4.13"
serde-humanize-rs = "0.1.1"
proxy-wasm = "0.1.3"
bincode = "1.1.4"
wasm-bindgen = "0.2.73"
